--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -227,7 +227,7 @@ ol {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 32px;
+  padding: 32px 16px;
   font-size: 14px;
   line-height: 1.2;
   text-transform: uppercase;
