--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -795,10 +795,9 @@
 ========================================*/
 /* ----- Product Overview section ----- */
 .product-overview-section {
+  padding-bottom: 90px;
   margin-top: 96px;
   position: relative;
-  z-index: 0;
-  /* background-color: var(--white-200); */
 }
 
 .product-overview-section::before {
@@ -839,6 +838,11 @@
   clip-path: polygon(18% 0%, 100% 0%, 82% 100%, 0% 100%);
   margin-top: 70px;
   margin-right: 40px;
+  transition: all 0.3s ease-in-out;
+}
+
+.product-overview-share-btn:hover {
+  background-color: var(--black);
 }
 
 .product-overview-share-btn-icon {
@@ -848,6 +852,7 @@
 
 .product-overview-img {
   max-width: 882px;
+  max-height: 560px;
 }
 
 #product-overview-thumbnail {
@@ -855,7 +860,7 @@
 }
 
 .product-overview-thumbnail-track {
-  width: 66%;
+  width: 72%;
   margin-inline: auto;
 }
 
@@ -900,17 +905,25 @@
   max-width: 364px;
 }
 
-.product-overview-label {
-  width: 100vw;
+.product-overview-label,
+.product-overview-label-wrapper,
+.product-overview-label-description {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+.product-overview-label {
+  width: 100vw;
   color: var(--black-200);
   padding-block: 12px;
-  padding-left: 22px;
+}
+
+.product-overview-label-wrapper {
+  padding-inline: 22px;
 }
 
 .product-overview-label-description {
-  display: flex;
   margin-right: 15px;
 }
 
@@ -939,6 +952,93 @@
   margin-top: 16px;
 }
 
+/* --- START MORE INFO MODAL --- */
+.side-bar-modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-28);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.side-bar-modal.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.more-info-wrapper {
+  width: 100%;
+  max-width: 680px;
+  height: 100vh;
+  margin-left: auto;
+  overflow: auto;
+  background: url(../images/sections/hero-section/modal-bg-layer.png), var(--black);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding-block: 20px;
+  padding-inline: 80px 26px;
+}
+
+.more-info-modal-close-btn {
+  justify-self: end;
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 56px;
+}
+
+.more-info-modal-close-btn:hover {
+  color: var(--white);
+}
+
+.more-info-modal-close-btn-icon {
+  width: 55%;
+}
+
+.more-info-content {
+  max-width: 544px;
+  color: var(--white-80);
+  font-weight: 200;
+}
+
+.more-info-modal {
+  font-style: italic;
+  font-family: var(--font-transducer-exp);
+  font-weight: 400;
+  margin-bottom: 40px;
+}
+
+.more-info-modal span {
+  font-family: var(--font-transducer-black-exp);
+}
+
+.more-info-content-title {
+  font-family: var(--font-transducer);
+  font-weight: 400;
+  margin-bottom: 22px;
+}
+
+.more-info-description {
+  margin-bottom: 36px;
+}
+
+.more-info-content-list {
+  list-style-type: disc;
+  padding-left: 16px;
+}
+.more-info-content-list-item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.more-info-modal-btn {
+  margin-top: 54px;
+}
+/* --- END MORE INFO MODAL --- */
+
 .product-overview-more-info::before,
 .product-overview-more-info::after {
   border-color: var(--black);
@@ -961,6 +1061,7 @@
 .product-overview-btn-wrapper {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 14px;
   margin-block: 24px 22px;
 }
@@ -1010,4 +1111,152 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+/* ========================================
+          Compare HTML
+========================================*/
+/* ----- Compare section ----- */
+.compare-section {
+  margin-top: 96px;
+  padding-block: 104px;
+}
+
+.compare-main-content {
+  max-width: 375px;
+  margin-bottom: 78px;
+}
+
+.compare-main-title {
+  font-family: var(--font-transducer);
+  margin-bottom: 12px;
+}
+
+.compare-main-caption {
+  font-size: 15px;
+  font-family: var(--font-transducer-exp);
+  font-style: italic;
+}
+
+.compare-item-wrapper {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 50px;
+}
+
+.compare-item-list {
+  max-width: 544px;
+  background-color: var(--white-200);
+  filter: drop-shadow(0 0 20px var(--black-102));
+  padding: 24px 18px;
+}
+
+.compare-caption-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 18px;
+}
+
+.compare-caption {
+  font-family: var(--font-transducer-exp);
+  font-style: italic;
+  line-height: 1.2;
+  padding-block: 8px;
+  padding-inline: 24px;
+}
+
+.compare-close-btn {
+  width: 45px;
+  background-color: var(--black);
+  color: var(--white);
+  transition: all 0.3s ease-in-out;
+}
+
+.compare-close-btn-icon {
+  width: 60%;
+}
+
+.compare-close-btn:hover {
+  color: var(--black);
+}
+
+.compare-close-btn::after {
+  background-color: var(--white-500);
+}
+
+.compare-item-title {
+  font-style: italic;
+  font-family: var(--font-transducer-exp);
+  font-weight: 400;
+  margin-top: 6px;
+}
+
+.compare-item-title span {
+  font-family: var(--font-transducer-black-exp);
+  display: block;
+}
+
+.compare-item-img-content {
+  width: 508px;
+  height: 324px;
+}
+
+.compare-item-price-apr-wrapper {
+  display: flex;
+  font-family: var(--font-transducer-black-exp);
+  font-style: italic;
+  line-height: 1.181;
+  margin-bottom: 30px;
+}
+
+.compare-item-price-apr-wrapper span {
+  font-family: var(--font-transducer-exp);
+  margin-inline: 6px 24px;
+}
+
+.compare-item-border {
+  border: 1px solid var(--black-11);
+}
+
+.compare-item-specifics-tag {
+  margin-top: 30px;
+  font-family: var(--font-transducer-exp);
+  font-style: italic;
+  margin-bottom: 30px;
+}
+
+.compare-item-specifics-tag span {
+  font-family: var(--font-transducer-black-exp);
+}
+
+.compare-specifics-list-item:nth-child(odd) {
+  background-color: var(--white);
+}
+
+.compare-specifics-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  padding-block: 26px;
+  padding-left: 40px;
+}
+
+.specifics-list-title {
+  font-family: var(--font-transducer);
+  font-weight: 400;
+}
+
+.specifics-list-description {
+  color: var(--black-200);
+}
+
+.compare-btn {
+  min-width: 100%;
+}
+
+.compare-get-in-touch {
+  color: var(--black);
+  border-color: var(--black);
+  margin-block: 24px 8px;
 }
