--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -93,6 +93,24 @@
   .product-overview-label-description {
     margin-right: 6px;
   }
+
+  /* ========================================
+          Compare HTML
+========================================*/
+  /* ----- Compare section ----- */
+  .compare-section {
+    margin-top: 92px;
+    padding-block: 82px;
+  }
+
+  .compare-item-wrapper {
+    gap: 26px;
+  }
+
+  .compare-item-img-content {
+    width: 406px;
+    height: 268px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -484,6 +502,29 @@
     margin-bottom: 10px;
   }
   /* --- END MORE INFO MODAL --- */
+
+  /* ========================================
+          Compare HTML
+========================================*/
+  /* ----- Compare section ----- */
+  .compare-section {
+    margin-top: 82px;
+  }
+
+  .compare-main-content {
+    margin-bottom: 55px;
+  }
+
+  .compare-item-wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 44px;
+  }
+
+  .compare-item-img-content {
+    width: 468px;
+    height: 288px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -754,4 +795,58 @@
     padding-left: 26px;
   }
   /* --- END MORE INFO MODAL --- */
+
+  /* ========================================
+          Compare HTML
+========================================*/
+  /* ----- Compare section ----- */
+  .compare-item-list {
+    max-width: 100%;
+  }
+
+  .compare-caption {
+    font-size: 12px;
+    font-weight: 1.3;
+  }
+
+  .compare-item-img-content {
+    width: 100%;
+    height: 242px;
+  }
+
+  .compare-item-price-apr-wrapper {
+    margin-bottom: 26px;
+  }
+
+  .compare-item-specifics-tag {
+    margin-block: 26px;
+  }
+
+  .compare-item-title,
+  .specifics-list-title {
+    font-size: 20px;
+  }
+
+  .compare-item-title {
+    line-height: 1.2;
+  }
+
+  .specifics-list-title {
+    line-height: 1;
+  }
+
+  .specifics-list-description {
+    font-size: 16px;
+    line-height: 1.75;
+  }
+}
+
+@media (max-width: 424px) {
+  /* ========================================
+          Compare HTML
+========================================*/
+  /* ----- Compare section ----- */
+  .compare-item-img-content {
+    height: 200px;
+  }
 }
